--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "cloudinary": "^1.37.0",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongodb": "^5.6.0",
+    "multer": "^1.4.5-lts.1"
   }
 }
