--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "helmet": "^7.0.0",
     "mongodb": "^5.6.0",
     "multer": "^1.4.5-lts.1",
+    "resend": "^0.15.3",
     "xss-clean": "^0.1.4"
   }
 }
