--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-mongo-sanitize": "^2.2.0",
+    "express-openid-connect": "^2.16.0",
     "helmet": "^7.0.0",
     "mongodb": "^5.6.0",
     "multer": "^1.4.5-lts.1",
